<resources>
    <string name="app_name">RelativeLayout2</string>
    <string name="bluebg">BlueBg</string>
    <string name="students">Students</string>
    <string name="marks">\t\t\tMark\n Attendence</string>
    <string name="marks2">\t\t\tShow\n Attendence</string>
    <string name="marks3"> Home\n  Work</string>
    <string name="markAtten">markAtten</string>
    <string name="notice">Notice</string>
    <string name="gallery">Gallery</string>
    <string name="fee">Pay Fee</string>
    <string name="about">About</string>
</resources>